# workshop_airflow

./: .env  .gitignore  Dockerfile  airflow_settings.yaml  exemplo_00.py  exemplo_01.py  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: .airflowignore  api_to_postgres.py  main.py  minha_primeira_dag.py  minha_quarta_dag.py  minha_quinta_dag.py  minha_segunda_dag.py  minha_sexta_dag.py  minha_terceira_dag.py
exemplo_03/: exemplo_03.py
exemplo_03/pipeline/: pipeline.py
include/: controller.py  db.py  models.py
